--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": null,
+    "password": "root",
+    "port": 8889,
     "database": "closetdb",
     "host": "localhost",
     "dialect": "mysql"
