--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^1.14.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
+    "multer": "^1.4.1",
     "mysql2": "^1.6.5",
     "sequelize": "^5.8.6"
   },
